# compression_course

./: README.md  ari.cpp  bash.sh  build.sh  run.sh
data_exploration/: data_exploration.ipynb  get_stats.py  table.txt
src/: AbstractCoder.cpp  AbstractCoder.h  AdaptiveFrequencyTable.cpp  AdaptiveFrequencyTable.h  BitIo.cpp  BitIo.h  CMakeLists.txt  Context.cpp  Context.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  FenwickTree.cpp  FenwickTree.h  PpmModel.cpp  PpmModel.h  ari.cpp  ari.h  debug.h  globals.h  main.cpp  ppm.cpp  ppm.h  utils.cpp  utils.h  vector_check.cpp
